[project]
name = "woRMS"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "openai>=1.109.1",
    "python-dotenv>=1.2.2",
    "ichatbio-sdk==0.2.8",
    "instructor>=1.15.1",
    "typing_extensions",
    "requests",
    "cloudscraper",
    "PyYAML",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]